--- a/package.json
+++ b/package.json
@@ -3,20 +3,22 @@
   "description": "Sample app that demonstrates the power of building UI components using Marko and Webpack",
   "version": "1.0.0",
   "dependencies": {
-    "@marko/fastify": "^1.0.0",
+    "@marko/fastify": "^1.0.2",
     "browserslist-useragent": "^3.0.3",
     "fastify": "^3.12.0",
-    "fastify-static": "4.0.1",
     "fastify-compress": "3.4.1",
+    "fastify-static": "4.0.1",
     "marko": "^5.1.8",
     "raptor-pubsub": "^1.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
+    "@fullhuman/postcss-purgecss": "^4.0.2",
     "@marko/compiler": "^5.1.8",
     "@marko/express": "^1.0.0",
     "@marko/webpack": "^7.0.0",
+    "autoprefixer": "^10.2.5",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
     "css-minimizer-webpack-plugin": "^1.2.0",
@@ -24,10 +26,12 @@
     "ignore-loader": "^0.1.2",
     "marked": "^1.2.8",
     "mini-css-extract-plugin": "^1.3.5",
+    "postcss": "^8.2.8",
     "postcss-loader": "^5.0.0",
     "postcss-preset-env": "^6.7.0",
     "spawn-server-webpack-plugin": "^5.0.5",
     "svg-url-loader": "^7.1.1",
+    "tailwindcss": "^2.0.3",
     "webpack": "^5.20.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2",
