--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "fastify-compress": "3.4.1",
     "fastify-static": "4.0.1",
     "marko": "^5.1.8",
+    "node-fetch": "^2.6.1",
     "raptor-pubsub": "^1.0.5"
   },
   "devDependencies": {
@@ -16,7 +17,6 @@
     "@babel/preset-env": "^7.12.11",
     "@fullhuman/postcss-purgecss": "^4.0.2",
     "@marko/compiler": "^5.1.8",
-    "@marko/express": "^1.0.0",
     "@marko/webpack": "^7.0.0",
     "autoprefixer": "^10.2.5",
     "babel-loader": "^8.2.2",
